// Represents general messages for application
syntax = "proto2";

package messages;

message HttpFormError {
    required string name = 1;
    required string msg  = 2;
}

message HttpFormErrors {
    repeated HttpFormError errors = 1;
}

message HttpError {
	required int32  code = 1;
	required string msg  = 2;
    optional string message = 3;
}

message ResourceConflictError {
    required string type   = 2;
    required string action = 3;
    required string reason = 4;
}

message AppInfo {
    // general server info
    required string name    = 1;
    required int64  version = 2;

    // server time
    required int64 currentTime = 3;

    // dvr
    required int64 dvrAvailable = 4;
}

message AppInfoV2 {
	// general server info
    required string name          = 1;
	required string version       = 2;
    required int64  clientVersion = 3;
    required string apiVersion    = 4;
    required string buildTime     = 5;

    // server time
    required int64 currentTime = 6;

    // dvr
    required int64 dvrAvailable = 7;

    // GA tracking
    optional string gaTrackingId       = 8;
    optional int32  gaSendRate         = 9;
    optional int32  gaPlayEventTimeout = 10;
}

message AppValidation {
    optional int32  appId     = 1 [default=1];
    optional string requestId = 2;
    optional int64  timestamp = 3;
    optional string token     = 4;
}