syntax = "proto2";

package messages;

message PlaybackInfo {
    optional string playUrl        = 1 [default=""];
    optional bool   dvrRestriction = 2 [default=true];
}

message Pause {
    required string contentId = 1;

    required int64  time      = 2;
    optional string channelId = 3;
    optional string programId = 4;
    optional bool   auto      = 5;
    optional string id        = 6;
}

message ChannelPauses {
    optional Pause channelPause  = 1;
    repeated Pause programPauses = 2;
}

message Play {
    optional string channelId   = 1;
    optional int64  time        = 2;
    optional string languageId  = 3;
    optional string renditionId = 4;
}

message LivePlaybackInfo {
    required int64           liveTime  = 1;
    repeated LanguageInfo    languages = 2;
    optional int64           expires   = 3;
    repeated MulticastStream multicastStreams = 4;
    repeated MulticastStream multicastStreamsV2 = 400;
    optional string          thumbnailServerUrl = 5;
    optional string perceptedAspectRatio = 6;
    optional bool autoScaleOn = 7;
    optional LiveDelay liveDelay = 8;
}

message LiveDelay {
    required int64 current = 1;
    optional int64 min = 2;
    optional int64 max = 3;
}


message MulticastStream {
    required string address = 1;
    required string path = 2;
    optional string key = 3;
    optional int64 bps = 4;
}

message LanguageInfo {
    optional bool          default    = 1 [default=false];
    required string        id         = 2;
    required string        caption    = 3;
    repeated RenditionInfo renditions = 4;
}

message RenditionInfo {
    optional bool   default = 1 [default=false];
    required string id      = 2;
    required string caption = 3;
    required string url     = 4;
    optional bool mayBeIncompatible = 5;
    optional bool isOriginal = 6;
}

